--- a/images.html
+++ b/images.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Cities</title>
+    <title>Images</title>
 </head>
 <body>
-    <h1> 
-        <ul> 
-            <li> Istanbul</li>
-            <li> Ankara </li>
-            <li> Izmir </li>
-        </ul>
-
-    </h1>
+    <h1> İmages of Cities</h1>
 </body>
 </html>
