--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <li> Istanbul</li>
             <li> Ankara </li>
             <li> Izmir </li>
+            <li> Dersim</li>
+            <li> Erzincan</li>
         </ul>
 
     </h1>
