--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
             <li> Istanbul</li>
             <li> Ankara </li>
             <li> Izmir </li>
+            <li> Adana </li>
             <li> Dersim</li>
             <li> Erzincan</li>
+            <li> Amed</li>
+            <li> Berlin</li>
         </ul>
 
     </h1>
