Yabanci sehirler eklendi.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <h1> 
         <ul> 
-            <li> Istanbul</li>
-            <li> Ankara </li>
-            <li> Izmir </li>
-            <li> Adana </li>
-            <li> Dersim</li>
-            <li> Erzincan</li>
-            <li> Amed</li>
+            <li> London</li>
+            <li> Washinhton </li>
+            <li> Paris </li>
+            <li> Viyana </li>
+            <li> Bern</li>
+            <li> Zurih</li>
+            <li> Hemedan</li>
             <li> Berlin</li>
         </ul>
 
