--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li> Hemedan</li>
             <li> Berlin</li>
             <li> Madrid</li>
+            <li> Zurich</li>
         </ul>
 
     </h1>
