--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li> Berlin</li>
             <li> Madrid</li>
             <li> Zurich</li>
+            <li> Newyork</li>
         </ul>
 
     </h1>
